test/tasty/pos/src-2/tastytest/TestDelayedExtends.scala
package tastytest

object TestDelayedExtends {
  def test: DelayedExtends.Foo = ???
}
