test/tasty/neg/src-2/TestDelayedPrivateInverse_fail.scala
package tastytest

object TestDelayedPrivateInverse {
  def test: DelayedPrivateInverse.Parent[Nothing] = ??? // force sealed children of parent
  locally {
    val _ = DelayedPrivateInverse.Internal
  }
}
